s32cc: Move DDR clock on FIRC before DDR deassert
The move of the DDR clock on FIRC is needed due to this note
from RM:

The PRST0_0[PERIPH_3_RST] reset must deassert when DDR_CLK is
selected as FIRC. DDR_CLK can be switched to functional
frequency after the reset deasserts.

Issue: ALB-9880
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -479,6 +479,15 @@
 		ddrpll: ddrpll@40044000 {
 			compatible = "nxp,s32cc-ddrpll";
 			reg = <0x0 0x40044000 0x0 0x3000>;
+
+			assigned-clocks =
+				<&plat_clks S32GEN1_CLK_DDR_PLL_MUX>,
+				<&plat_clks S32GEN1_CLK_DDR_PLL_VCO>;
+			assigned-clock-parents =
+				<&plat_clks S32GEN1_CLK_FXOSC>;
+			assigned-clock-rates =
+				<0>,
+				<S32GEN1_DDR_PLL_VCO_FREQ>;
 		};
 
 		fxosc: fxosc@40050000 {
