fdts: s32cc: Reduce the list of the preconfigured clocks
Reduce the list of the preconfigured clocks to the DDR clock. The
original list included clocks that were not yet handled by the U-Boot
drivers / platform code. This is no longer the case.

Issue: ALB-9888
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -317,6 +317,13 @@
 			#clock-cells = <1>;
 			status = "okay";
 
+			/**
+			 * Keep here the clocks to be used by the BL31 stage to avoid
+			 * their accidental disabling during the reset of the SCMI agents.
+			 */
+			clocks = <&plat_clks S32GEN1_CLK_DDR>,
+				 <&plat_clks S32GEN1_CLK_LINFLEXD>;
+
 			assigned-clocks =
 				<&plat_clks S32GEN1_CLK_FXOSC>,
 				<&plat_clks S32GEN1_CLK_FIRC>,
