--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -139,6 +139,8 @@
 &mc_cgm0 {
 	assigned-clocks =
 		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX0>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX1>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX2>,
 		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX3>,
 		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX4>,
 		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX5>,
@@ -158,6 +160,8 @@
 		<&plat_clks S32GEN1_CLK_SDHC>;
 	assigned-clock-parents =
 		<&plat_clks S32GEN1_CLK_ARM_PLL_DFS1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI0>,
+		<&plat_clks S32GEN1_CLK_FXOSC>,
 		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
 		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
 		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
@@ -167,6 +171,8 @@
 		<&plat_clks S32GEN1_CLK_PERIPH_PLL_DFS3>,
 		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI7>;
 	assigned-clock-rates =
+		<0>,
+		<0>,
 		<0>,
 		<0>,
 		<0>,
