s32: pcie: Update PCIe device tree nodes to match Linux
Issue: ALB-8358

Signed-off-by: Ionut Vicovan <Ionut.Vicovan@nxp.com>

--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -210,3 +210,11 @@
 &siul2_1_nvram {
 	compatible = "nxp,s32g3-siul2_1-nvram";
 };
+
+&pcie0 {
+	pcie_device_id = <0x4300>;
+};
+
+&pcie1 {
+	pcie_device_id = <0x4300>;
+};
