--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -893,32 +893,46 @@
 
 		pcie0: pcie@40400000 {
 			compatible = "nxp,s32cc-pcie";
-			reg = <0x00 0x40400000 0x0 0x00001000   /* dbi registers */
+			reg = <0x00 0x40400000 0x0 0x00001000>,   /* dbi registers */
+			       <0x00 0x40420000 0x0 0x00001000>,   /* dbi2 registers */
+			       <0x00 0x40460000 0x0 0x00001000>,   /* atu registers */
+			       <0x00 0x40470000 0x0 0x00001000>,   /* dma registers */
+			       <0x00 0x40481000 0x0 0x000000f8>,   /* ctrl registers */
 			       /* RC configuration space, 4KB each for cfg0 and cfg1
 				* at the end of the outbound memory map
 				*/
-			       0x5f 0xffffe000 0x0 0x00002000>;
-			reg-names = "dbi", "config";
+			       <0x5f 0xffffe000 0x0 0x00002000>,
+			       /* 1GB EP addr space */
+			       <0x58 0x00000000 0x0 0x40000000>;
+			reg-names = "dbi", "dbi2", "atu", "dma", "ctrl",
+				    "config", "addr_space";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			serdes-handle = <&serdes0>;
 
+			device_type = "pci";
+			device_id = <0>;
+
+			nxp,phy-mode = "crns";
+			num-lanes = <2>;
+			max-link-speed = <3>;
+
+			nvmem-cell-names = "serdes_presence", "pcie_variant";
+			nvmem-cells = <&serdes_presence>, <&pcie_variant>;
+
+			/* Root Complex */
+			bus-range = <0x0 0xff>;
 			ranges =
 				/* downstream I/O, 64KB and aligned naturally just
 				 * before the config space to minimize fragmentation
 				 */
-				<0x81000000 0x0 0x00000000 0x5f 0xfffe0000 0x0 0x00010000
+				<0x81000000 0x0 0x00000000 0x5f 0xfffe0000 0x0 0x00010000>,
 				/* non-prefetchable memory, with best case size and
 				 * alignment
 				 */
-				 0x82000000 0x0 0x00000000 0x58 0x00000000 0x7 0xfffe0000>;
-			num-lanes = <2>;
-			max-link-speed = <3>;
-			bus-range = <0x0 0xff>;
+				<0x82000000 0x0 0x00000000 0x58 0x00000000 0x7 0xfffe0000>;
 
-			nvmem-cell-names = "serdes_presence", "pcie_variant";
-			nvmem-cells = <&serdes_presence>, <&pcie_dev_id>;
-			status = "disabled";
+
+			status = "okay";
 		};
 
 		serdes0: serdes@40480000 {
@@ -949,30 +963,44 @@
 
 		pcie1: pcie@44100000 {
 			compatible = "nxp,s32cc-pcie";
-			reg = <0x00 0x44100000 0x0 0x00001000   /* dbi registers */
-				/* configuration space, 4KB each for cfg0 and cfg1
-				 * at the end of the outbound memory map
-				 */
-				0x4f 0xffffe000 0x0 0x00002000>;
-			reg-names = "dbi", "config";
+			reg = <0x00 0x44100000 0x0 0x00001000>,   /* dbi registers */
+			      <0x00 0x44120000 0x0 0x00001000>,   /* dbi2 registers */
+			      <0x00 0x44160000 0x0 0x00001000>,   /* atu registers */
+			      <0x00 0x44170000 0x0 0x00001000>,   /* dma registers */
+			      <0x00 0x44181000 0x0 0x000000f8>,   /* ctrl registers */
+			      /* RC configuration space, 4KB each for cfg0 and cfg1
+			       * at the end of the outbound memory map
+			       */
+			      <0x4f 0xffffe000 0x0 0x00002000>,
+			      /* 1GB EP addr space */
+			      <0x48 0x00000000 0x0 0x40000000>;
+			reg-names = "dbi", "dbi2", "atu", "dma", "ctrl",
+				    "config", "addr_space";
 			#address-cells = <3>;
 			#size-cells = <2>;
-			serdes-handle = <&serdes1>;
+
+			device_type = "pci";
+			device_id = <1>;
+
+			nxp,phy-mode = "crns";
+			num-lanes = <1>;
+			max-link-speed = <3>;
+
+			nvmem-cell-names = "serdes_presence", "pcie_variant";
+			nvmem-cells = <&serdes_presence>, <&pcie_variant>;
+
+			/* Root Complex */
+			bus-range = <0x0 0xff>;
 			ranges =
 				/* downstream I/O, 64KB and aligned naturally just
 				 * before the config space to minimize fragmentation
 				 */
-				<0x81000000 0x0 0x00000000 0x4f 0xfffe0000 0x0 0x00010000
+				<0x81000000 0x0 0x00000000 0x4f 0xfffe0000 0x0 0x00010000>,
 				/* non-prefetchable memory, with best case size and
 				 * alignment
 				 */
-				 0x82000000 0x0 0x00000000 0x48 0x00000000 0x7 0xfffe0000>;
-			num-lanes = <1>;
-			max-link-speed = <3>;
-			bus-range = <0x0 0xff>;
+				<0x82000000 0x0 0x00000000 0x48 0x00000000 0x7 0xfffe0000>;
 
-			nvmem-cell-names = "serdes_presence", "pcie_variant";
-			nvmem-cells = <&serdes_presence>, <&pcie_dev_id>;
 
 			status = "okay";
 		};
