--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -57,6 +57,19 @@
 		#size-cells = <2>;
 		ranges;
 
+		/* 4Mb shared memory for PCIe shared mem transfers, EP mode */
+		pci_shared_memory0: shm@c0000000 {
+			compatible = "nxp,s32cc-shm";
+			reg = <0x0 0xc0000000 0x0 0x400000>;    /* 4 MB */
+			no-map;
+		};
+
+		pci_shared_memory1: shm@c0400000 {
+			compatible = "nxp,s32cc-shm";
+			reg = <0x0 0xc0400000 0x0 0x400000>;    /* 4 MB */
+			no-map;
+		};
+
 		scmi_shbuf: shm@d0000000 {
 			compatible = "arm,scmi-shmem";
 			reg = <0x0 0xd0000000 0x0 0x400000>;    /* 4 MB */
@@ -892,7 +905,6 @@
 		};
 
 		pcie0: pcie@40400000 {
-			compatible = "nxp,s32cc-pcie";
 			reg = <0x00 0x40400000 0x0 0x00001000>,   /* dbi registers */
 			       <0x00 0x40420000 0x0 0x00001000>,   /* dbi2 registers */
 			       <0x00 0x40460000 0x0 0x00001000>,   /* atu registers */
@@ -931,6 +943,9 @@
 				 */
 				<0x82000000 0x0 0x00000000 0x58 0x00000000 0x7 0xfffe0000>;
 
+			/* End Point */
+			shared-mem = <&pci_shared_memory0>;
+			auto-config-bars;
 
 			status = "okay";
 		};
@@ -962,7 +977,6 @@
 		};
 
 		pcie1: pcie@44100000 {
-			compatible = "nxp,s32cc-pcie";
 			reg = <0x00 0x44100000 0x0 0x00001000>,   /* dbi registers */
 			      <0x00 0x44120000 0x0 0x00001000>,   /* dbi2 registers */
 			      <0x00 0x44160000 0x0 0x00001000>,   /* atu registers */
@@ -1001,6 +1015,9 @@
 				 */
 				<0x82000000 0x0 0x00000000 0x48 0x00000000 0x7 0xfffe0000>;
 
+			/* End Point */
+			shared-mem = <&pci_shared_memory1>;
+			auto-config-bars;
 
 			status = "okay";
 		};
